# torchGMM

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini
.cursor/rules/: project.mdc  pytest.mdc  python-pytorch.mdc
.cursor/skills/commit-precommit-retry/: SKILL.md
.github/: copilot-instructions.md
.github/extensions/git-status-on-push/: extension.mjs
docs/: diffusion_vs_flow_matching.md  fkc_steering.md  karras_schedule.md
notebooks/: CLAUDE.md  _utils.py  _ve_tune.py  af3_steering.py  compare_sampling.py  conditional_gmm.py  create_forwardbackward_gif.py  create_gif.py  create_steering_gif.py  diffusion_test.py  flow_matching.py  forward_reverse_gmm_diffusion.py  gmm_sandbox.py  karras_terminal_variance_steering.py  reverse_diffusion.py  sampling.py  steered_sampling.py  ve_schedule.py  ve_steering.py
src/torchGMM/: CLAUDE.md  __init__.py  conditional.py  diffusion.py  gmm.py  sampling.py  schedule.py
tests/: conftest.py  test_conditional.py  test_diffusion.py  test_gmm.py  test_sampling.py  test_steering.py
torchGMM/: CLAUDE.md  __init__.py  gmm.py  sampling.py  schedule.py
