[build-system]
	requires      = ["setuptools>=61.0", "setuptools-scm"]
	build-backend = "setuptools.build_meta"

# Single source of truth for all tool configurations
[tool.black]
	line-length    = 120
	target-version = ["py310"]
	extend-exclude = "docs/_build|enhancedsampling.egg-info"

[tool.isort]
	profile     = "black"
	line_length = 120

[tool.flake8]
	max-line-length = 120
	extend-ignore = [
		"E203", # whitespace before ':' (Black compatibility)
		"W503", # line break before binary operator (Black compatibility)
		"E266", # too many leading '#' for block comment (style)
		"F403", # 'from module import *' used; unable to detect undefined names
		"F401", # module imported but unused
	]
	max-complexity = 18
	select = [
		"E", # pycodestyle errors (general style errors)
		"F", # pyflakes errors (import and undefined variable errors)
		"W", # pycodestyle warnings (general style warnings)
	] # Note: T4 (bugbear) is temporarily removed due to recursion error
	exclude = [
		"torchGMM.egg-info",
		"docs/_build",
		"__pycache__",
		".git",
		".venv",
		"venv",
		"env",
		"outputs",
		"checkpoints",
		"*.egg-info",
	]


[project]
	name = "torchGMM"
	dynamic = ["version"]
	description = "Simple Diffusion on GMM's"
	requires-python = ">=3.10"
	dependencies = [
		"numpy",
		"matplotlib",
		"einops",
		"seaborn",
		"torch>=2.7.1",
		"tqdm>=4.67.1",
		"wandb>=0.20.1",
		"rich>=13.13.0",
		"ipykernel",
		"pytest>=8.4.2",
		"scipy>=1.15.3",
		"fastmbar>=1.4.6",
		"einops",
	]

[project.optional-dependencies]
	# Testing dependencies
	test = ["pytest>=8.4.1", "pytest-xdist>=3.8.0", "pytest-cov>=5.0.0"]
	dev = [
		"pre-commit>=4.0.1",
		"black>=25.1.0",
		"isort>=5.13.0",
		"flake8>=7.3.0",
		"flake8-comprehensions>=3.16.0",
		"flake8-pyproject>=1.2.0",
	]
	jupyter = [
		"ipykernel>=6.29.5",
		"ipython>=8.29.0",
		"jupyter_client>=8.6.3",
		"jupyter_core>=5.7.2",
		"matplotlib-inline>=0.1.7",
	]


[tool.setuptools]
	package-dir = { "" = "src" }

[tool.setuptools.packages.find]
	where   = ["src"]
	include = ["*"]

[tool.setuptools-scm]


# Testing configuration
[tool.pytest.ini_options]
	testpaths = ["tests"]
	python_files = ["test_*.py", "*_test.py"]
	python_classes = ["Test*"]
	python_functions = ["test_*"]
	addopts = ["--strict-markers", "--strict-config", "--verbose"]
	markers = [
		"slow: marks tests as slow (deselect with '-m \"not slow\"')",
		"integration: marks tests as integration tests",
	]
