[build-system]
    requires      = ["setuptools>=61.0", "setuptools-scm"]
    build-backend = "setuptools.build_meta"

[project]
    name = "torchGMM"
    dynamic = ["version"]
    description = "Simple Diffusion on GMM's"
    requires-python = ">=3.10"
    dependencies = [
        "einops",
        "fastmbar>=1.4.6",
        "ipykernel",
        "matplotlib",
        "numpy",
        "rich>=13.13.0",
        "scipy>=1.15.3",
        "seaborn",
        "torch>=2.7.1",
        "tqdm>=4.67.1",
        "wandb>=0.20.1",
    ]

[project.optional-dependencies]
    test = ["pytest>=8.4.1", "pytest-cov>=5.0.0", "pytest-xdist>=3.8.0"]
    dev = [
        "pre-commit>=4.0.1",
        "black>=25.1.0",
        "isort>=5.13.0",
        "flake8>=7.3.0",
        "flake8-comprehensions>=3.16.0",
        "flake8-pyproject>=1.2.0",
    ]
    jupyter = [
        "ipykernel>=6.29.5",
        "ipython>=8.29.0",
        "jupyter_client>=8.6.3",
        "jupyter_core>=5.7.2",
        "matplotlib-inline>=0.1.7",
    ]

[tool.setuptools]
    package-dir = { "" = "src" }

[tool.setuptools.packages.find]
    where = ["src"]

[tool.setuptools-scm]

[tool.black]
    line-length    = 120
    target-version = ["py310"]

[tool.isort]
    profile     = "black"
    line_length = 120

[tool.flake8]
    max-line-length = 120
    max-complexity = 18
    select = ["E", "F", "W"]
    extend-ignore = ["E203", "W503", "E266", "F403", "F401"]
    exclude = [
        ".git",
        "__pycache__",
        ".venv",
        "venv",
        "*.egg-info",
        "docs/_build",
    ]

[tool.pytest.ini_options]
    testpaths = ["tests"]
    addopts = ["-n", "auto", "--strict-markers", "--strict-config", "--verbose"]
    markers = [
        "slow: marks tests as slow (deselect with '-m \"not slow\"')",
        "integration: marks tests as integration tests",
    ]
