[build-system]
    requires      = ["setuptools>=61.0", "setuptools-scm"]
    build-backend = "setuptools.build_meta"

[project]
    name = "torchGMM"
    dynamic = ["version"]
    description = "Simple Diffusion on GMM's"
    requires-python = ">=3.10"
    dependencies = [
        "beartype>=0.18.0",
        "einops",
        "jaxtyping>=0.2.34",
        "numpy",
        "scipy>=1.15.3",
        "torch>=2.7.1",
        "tqdm>=4.67.1",
    ]

[project.optional-dependencies]
    test = [
        "matplotlib",
        "pytest>=8.4.1",
        "pytest-cov>=5.0.0",
        "pytest-sugar>=1.0.0",
        "pytest-xdist>=3.8.0",
    ]
    dev = [
        "pre-commit>=4.0.1",
        "ruff>=0.9.0",
        "ty>=0.0.1a8",
    ]
    jupyter = [
        "ipykernel>=6.29.5",
        "ipython>=8.29.0",
        "jupyter_client>=8.6.3",
        "jupyter_core>=5.7.2",
        "matplotlib",
        "matplotlib-inline>=0.1.7",
        "pillow",
        "rich>=13.13.0",
    ]

[tool.setuptools]
    package-dir = { "" = "src" }

[tool.setuptools.packages.find]
    where = ["src"]

[tool.setuptools.package-data]
    torchGMM = ["py.typed"]

[tool.setuptools-scm]

[tool.ruff]
    line-length    = 120
    target-version = "py310"

[tool.ruff.lint]
    select        = ["E", "F", "W", "I", "UP"]
    extend-ignore = ["E203", "E266", "E731", "F403", "F401", "F722"]  # E731: allow lambda assignments; F722: jaxtyping *batch syntax
    exclude       = [".git", "__pycache__", ".venv", "venv", "*.egg-info", "docs/_build"]

[tool.ruff.lint.isort]
    known-first-party = ["torchGMM"]

[tool.ruff.format]
    # Matches black's default style

[tool.ty.environment]
    python-version = "3.10"

[tool.pytest.ini_options]
    testpaths = ["tests"]
    addopts = ["-n", "auto", "--strict-markers", "--strict-config", "--verbose"]
    markers = [
        "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    ]
